--- a/src/app/sections/info-perfil/info-perfil.component.html
+++ b/src/app/sections/info-perfil/info-perfil.component.html
@@ -6,6 +6,6 @@
                 {{ usuario.nombre }} {{ usuario.apellidos }}
             </div>
             <p>{{ usuario.rol }}</p>
-            <p>{{ usuario.localidad }} {{ usuario.provincia }}</p>
+            <p>{{ usuario.localidad }}, {{ usuario.provincia }}</p>
         </div>
 </div>
