--- a/src/app/navs/perfil-nav/perfil-nav.component.html
+++ b/src/app/navs/perfil-nav/perfil-nav.component.html
@@ -3,14 +3,14 @@
 >
   <nav class="flex space-x-6 border-b border-gray-200 w-full">
     <a href="/perfil" routerLink="/perfil"
-      routerLinkActive="text-blue-600 border-b-2 border-blue-600"
-      class="pb-2 text-gray-500 hover:text-blue-500 transition duration-300"
+      routerLinkActive="text-[#3b9ab8] border-b-2 border-[#3b9ab8]"
+      class="pb-2 text-gray-500 hover:text-[#3b9ab8] transition duration-300"
     >
       General</a
     >
     <a href="/perfilHistorial" routerLink="/perfilHistorial"
-      routerLinkActive="text-blue-600 border-b-2 border-blue-600"
-      class="pb-2 text-gray-500 hover:text-blue-500 transition duration-300"
+      routerLinkActive="text-[#3b9ab8] border-b-2 border-blue-600"
+      class="pb-2 text-gray-500 hover:text-[#3b9ab8] transition duration-300"
     >
       Historial de citas</a
     >
