Quitar fecha en la cita de historial

--- a/src/app/sections/historial/cita-historial/cita-historial.component.html
+++ b/src/app/sections/historial/cita-historial/cita-historial.component.html
@@ -8,7 +8,7 @@
       <div class="ml-4">
         <p class="font-semibold text-gray-800">{{ cita.doctor.nombre }} {{cita.doctor.apellidos}}</p>
         <p class="text-sm text-[#3B9AB8]">{{ cita.fecha | date: 'HH:mm':'UTC' }} - {{sumarMediaHora(cita.fecha) | date: 'HH:mm':'UTC'}} </p>
-        <p class="text-sm text-[#3B9AB8]">{{ cita.fecha | date: 'dd-MM-yyyy':'UTC'}}</p>
+        <!-- <p class="text-sm text-[#3B9AB8]">{{ cita.fecha | date: 'dd-MM-yyyy':'UTC'}}</p> -->
       </div>
     </div>
     <div class="receta">
