Añadida funcionalidad a doctores del footer y arreglado citas

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,11 +1,10 @@
 <div class="bg-[#3b9ab8] flex flex-col items-center justify-center text-white shadow-md py-10">
     <div class="bg-[#3b9ab8] flex justify-around text-white w-4/5 py-5 mb-5 ">
         <div class="pb-5">
-            <div class="pb-7">
+            <div class="pb-6">
                 <h2 class="text-lg font-bold">Jakarta</h2>
             </div>
             <div>Especialidad</div>
-            <div>Chat</div>
             <div>Citas</div>
             <div>Resultados</div>
         </div>
@@ -13,8 +12,7 @@
             <div class="pb-7 font-bold">Información</div>
             <div>Sobre nosotros</div>
             <div>Servicios</div>
-            <div>Doctores</div>
-            <div>Localización</div>
+            <a href="/listaDoctores" >Doctores</a>
         </div>
         <div class="pb-5">
             <div class="pb-7 font-bold">¡Contáctanos!</div>
