Añadiendo modal de ayuda

--- a/src/app/navs/left-nav/left-nav.component.css
+++ b/src/app/navs/left-nav/left-nav.component.css
@@ -11,8 +11,9 @@
     fill: #ffffff;
 }
 
-a:hover {
+a:hover, #ayuda:hover {
     .svg {
+        transition: all 0.1s;
         fill: #ffffff;
     }
 }
