--- a/src/app/navs/left-nav/left-nav.component.html
+++ b/src/app/navs/left-nav/left-nav.component.html
@@ -1,3 +1,8 @@
+@if (isOpen) {
+  <app-ayuda (cambiarEstado)="cerrarModal($event)" />
+}
+
+
 <aside class="flex flex-col h-full px-4 py-8 overflow-y-auto bg-white border-r border-gray-300 shadow-lg">
   <div class="flex ml-4">
     <svg class="logo" width="21" height="37" viewBox="0 0 23 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -117,15 +122,15 @@
       }
 
 
-      <a class="flex items-center px-4 py-2 mt-5 text-[#7E7E7E] transition-colors duration-300 transform rounded-md hover:bg-[#3B9AB8] hover:text-[#FFFFFF]"
-        href="#">
+      <button id="ayuda" class="flex items-center px-4 py-2 mt-5 text-[#7E7E7E]  rounded-md hover:bg-[#3B9AB8] hover:text-[#FFFFFF]"
+      (click)="open()">
         <svg class="svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path class="svg" fill="#7E7E7E"
             d="M11.95 18q.525 0 .888-.363t.362-.887t-.362-.888t-.888-.362t-.887.363t-.363.887t.363.888t.887.362m-.9-3.85h1.85q0-.825.188-1.3t1.062-1.3q.65-.65 1.025-1.238T15.55 8.9q0-1.4-1.025-2.15T12.1 6q-1.425 0-2.312.75T8.55 8.55l1.65.65q.125-.45.563-.975T12.1 7.7q.8 0 1.2.438t.4.962q0 .5-.3.938t-.75.812q-1.1.975-1.35 1.475t-.25 1.825M12 22q-2.075 0-3.9-.787t-3.175-2.138T2.788 15.9T2 12t.788-3.9t2.137-3.175T8.1 2.788T12 2t3.9.788t3.175 2.137T21.213 8.1T22 12t-.788 3.9t-2.137 3.175t-3.175 2.138T12 22m0-2q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4T6.325 6.325T4 12t2.325 5.675T12 20m0-8" />
         </svg>
 
         <span class="mx-4 font-medium">Ayuda</span>
-      </a>
+      </button>
 
       <!-- <a class="flex items-center px-4 py-2 mt-5 text-[#7E7E7E] transition-colors duration-300 transform rounded-md dark:text-gray-400 hover:bg-[#3B9AB8] dark:hover:bg-gray-800 dark:hover:text-gray-200 hover:text-[#FFFFFF]" href="#">
                 <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -162,4 +167,8 @@
             <span class="mx-2 font-medium text-gray-800 dark:text-gray-200">John Doe</span>
         </a> -->
   </div>
+
 </aside>
+
+<!-- Modal de la ayuda -->
+
