--- a/src/app/navs/left-nav/left-nav.component.html
+++ b/src/app/navs/left-nav/left-nav.component.html
@@ -3,7 +3,7 @@
 }
 
 
-<aside class="flex flex-col h-full px-4 py-8 overflow-y-auto bg-white border-r border-gray-300 shadow-lg">
+<aside class="flex flex-col h-full px-4 py-8 overflow-y-auto bg-white border-r border-gray-300 shadow-lg min-w-[190px]">
   <div class="flex ml-4">
     <svg class="logo" width="21" height="37" viewBox="0 0 23 30" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path fill-rule="evenodd" clip-rule="evenodd"
