Añadida funcionalidad para votar doctores y marcar citas como votadas; se implementaron nuevos servicios y ajustes en componentes relacionados.

--- a/src/app/navs/left-nav/left-nav.component.html
+++ b/src/app/navs/left-nav/left-nav.component.html
@@ -122,7 +122,7 @@
       }
 
 
-      <button id="ayuda" class="flex items-center px-4 py-2 mt-5 text-[#7E7E7E]  rounded-md hover:bg-[#3B9AB8] hover:text-[#FFFFFF]"
+      <button id="ayuda" class="flex items-center px-4 py-2 mt-5 w-[100%] text-[#7E7E7E]  rounded-md hover:bg-[#3B9AB8] hover:text-[#FFFFFF]"
       (click)="open()">
         <svg class="svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path class="svg" fill="#7E7E7E"
