--- a/src/app/sections/lista-citas/cita/cita.component.html
+++ b/src/app/sections/lista-citas/cita/cita.component.html
@@ -52,12 +52,36 @@
                 <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 underline">Ver Receta</a>
             } 
         </div>
+       
         @if (cita.estado !== 'cancelada' && cita.estado !== 'terminada') {
             <button (click)="cancelarCita(cita.id)" class="flex text-red-400 hover:text-red-600  p-2 items-center ">Cancelar</button>
-        } @else if (cita.estado === 'terminada') {
-            <div class="flex text-red-400 mr-5 p-2 items-center ">Terminada</div>
-        } @else {
+        } @else if (cita.estado === 'terminada' && cita.votado === false) {
+            <div class="inline-flex border border-gray-200 rounded-full p-0.5 mr-4">
+                <button (click)="voto(cita.doctor.id, true)" type="button" class="inline-flex shrink-0 justify-center items-center size-8 rounded-full text-gray-500 hover:bg-blue-100 hover:text-blue-800 focus:outline-hidden focus:bg-blue-100 focus:text-blue-800 ">
+                  <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M7 10v12"></path>
+                    <path d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2h0a3.13 3.13 0 0 1 3 3.88Z"></path>
+                  </svg>
+                </button>
+                <button (click)="voto(cita.doctor.id, false)" type="button" class="inline-flex shrink-0 justify-center items-center size-8 rounded-full text-gray-500 hover:bg-blue-100 hover:text-blue-800 focus:outline-hidden focus:bg-blue-100 focus:text-blue-800">
+                  <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M17 14V2"></path>
+                    <path d="M9 18.12 10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22h0a3.13 3.13 0 0 1-3-3.88Z"></path>
+                  </svg>
+                </button>
+            </div>
+        } @else if (cita.estado === 'terminada' && cita.votado === true) {
+            <div class="inline-flex items-center border border-gray-300 bg-gray-100 text-gray-700 text-sm font-medium rounded-full px-3 py-1 shadow-sm hover:bg-gray-200 transition">
+                Ya has votado
+            </div>
+        }
+         @else if (cita.estado === 'cancelada') {
             <div class="flex text-red-400 mr-5 p-2 items-center ">Cancelada</div>
         }
     </div>
 </div>
+
+
+
+
+
