--- a/src/app/vistas/patient-booking/patient-booking.component.html
+++ b/src/app/vistas/patient-booking/patient-booking.component.html
@@ -10,7 +10,7 @@
       <div class="p-5 text-gray-800 w-1/3 border-r border-gray-300 mr-1.5">
         @if (!isStep2) {
         <div onclick="window.location.href='/index'"
-          class="inline-block w-10 h-10 mb-7 border border-gray-400 rounded-full flex items-center justify-center text-2xl cursor-pointer transition duration-300 transform hover:bg-[#3B9AB8] hover:text-white hover:scale-110">
+          class="inline-block w-10 h-10 mb-7 border border-gray-400 rounded-full flex items-center justify-center text-2xl cursor-pointer transition duration-300 transform hover:bg-[#f3f4f6] hover:text-white hover:scale-110">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <g fill="none">
               <path
@@ -22,7 +22,7 @@
         </div>
         } @else {
         <div (click)="step2false()"
-          class="inline-block w-10 h-10 mb-7 border border-gray-400 rounded-full flex items-center justify-center text-2xl cursor-pointer transition duration-300 transform hover:bg-[#3B9AB8] hover:text-white hover:scale-110">
+          class="inline-block w-10 h-10 mb-7 border border-gray-400 rounded-full flex items-center justify-center text-2xl cursor-pointer transition duration-300 transform hover:bg-[#f3f4f6] hover:text-white hover:scale-110">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <g fill="none">
               <path
