--- a/src/app/sections/info-general/info-general.component.html
+++ b/src/app/sections/info-general/info-general.component.html
@@ -5,11 +5,11 @@
 
       <div class="flex items-center space-x-4">
         <span class="text-sm font-medium text-gray-700">Cambiar Contraseña</span>
-        <button
-          class="px-3 py-1 text-sm text-blue-500 border border-blue-400 rounded-md hover:bg-blue-50 transition duration-300"
-        >
-          Cambiar
-        </button>
+        <a href="/editarPassword" 
+     class="px-3 py-1 text-sm text-blue-500 border border-blue-400 rounded-md hover:bg-blue-50 transition duration-300" 
+     id="openModalBtn">
+    Cambiar
+  </a>
       </div>
   
       <div class="flex items-center space-x-4">
