--- a/src/app/navs/secundary-nav/secundary-nav.component.html
+++ b/src/app/navs/secundary-nav/secundary-nav.component.html
@@ -1,9 +1,11 @@
 <nav class="flex items-center justify-between pt-6 pb-6">
   <app-user-welcome-nav [titulo]="titulo" />
   
+  @if (findNav) {
     <div class="mx-5">
       <app-find-nav (doctoresEncontrados)="recibirDoctoresDeBusqueda($event)" class="w-2/3"/>
     </div>
+  }
 
   <app-user-nav />
 </nav>
