--- a/src/app/sections/lista-citas/cita/cita.component.html
+++ b/src/app/sections/lista-citas/cita/cita.component.html
@@ -1,4 +1,5 @@
-<div
+<!-- (click)="abrirModal(cita)" -->
+<div 
     class="p-2 mb-2 rounded-md w-[100%] flex justify-between items-center group hover:bg-[#F6F6F6] border border-[#E9E9E9] ">
     <div
         class="fecha flex-none bg-[#EEF5DF] px-6 py-2 mr-10 rounded-md border-r border-[#E9E9E9] group-hover:bg-[#FFFFFF] flex-none items-center">
@@ -8,9 +9,13 @@
     <div *ngIf="!isCitasPage" class="flex flex-auto justify-between">
         <div>
             <p class="font-semibold text-gray-800">{{cita.fecha | date: 'HH:mm':'UTC'}}</p>
-            <p class="text-sm text-gray-600">Dr. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</p>
+            @if (isNotDoctor){
+                <p class="text-sm text-gray-600">Dr. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</p>
+            }@else {
+                <p class="text-sm text-gray-600">Dr. {{ cita.usuario.nombre }} {{ cita.usuario.apellidos }}</p>
+            }
         </div>
-        <button>
+        <button >
             <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor"
                 viewBox="0 0 24 24" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
@@ -41,7 +46,11 @@
                             clip-rule="evenodd" />
                     </svg>
                 </div>
-                <p class="text-sm text-gray-600">Dr. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</p>
+                @if (isNotDoctor){
+                    <p class="text-sm text-gray-600">Dr. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</p>
+                }@else {
+                    <p class="text-sm text-gray-600">Dr. {{ cita.usuario.nombre }} {{ cita.usuario.apellidos }}</p>
+                }
             </div>
         </div>
 
@@ -49,39 +58,83 @@
             <p class="font-semibold text-gray-800">Motivo: {{ cita.motivo }}</p>
             <!-- if para que apaezca dependiendo de si tiene receta o no -->
             @if (cita.estado === "terminada") {
-                <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 underline">Ver Receta</a>
-            } 
+            <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 underline">Ver Receta</a>
+            }
         </div>
-       
+
         @if (cita.estado !== 'cancelada' && cita.estado !== 'terminada') {
-            <button (click)="cancelarCita(cita.id)" class="flex text-red-400 hover:text-red-600  p-2 items-center ">Cancelar</button>
-        } @else if (cita.estado === 'terminada' && cita.votado === false) {
-            <div class="inline-flex border border-gray-200 rounded-full p-0.5 mr-4">
-                <button (click)="voto(cita.doctor.id, true)" type="button" class="inline-flex shrink-0 justify-center items-center size-8 rounded-full text-gray-500 hover:bg-blue-100 hover:text-blue-800 focus:outline-hidden focus:bg-blue-100 focus:text-blue-800 ">
-                  <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            @if (isNotDoctor === false) {
+                <a href="/receta" class="flex items-center bg-[#3B9AB8] transition-colors hover:bg-[#096c8a] text-white px-7 py-3 rounded-md"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M7.007 12a.75.75 0 0 1 .75-.75h3.493V7.757a.75.75 0 0 1 1.5 0v3.493h3.493a.75.75 0 1 1 0 1.5H12.75v3.493a.75.75 0 0 1-1.5 0V12.75H7.757a.75.75 0 0 1-.75-.75" />
+                    <path fill="currentColor" fill-rule="evenodd" d="M7.317 3.769a42.5 42.5 0 0 1 9.366 0c1.827.204 3.302 1.643 3.516 3.48c.37 3.157.37 6.346 0 9.503c-.215 1.837-1.69 3.275-3.516 3.48a42.5 42.5 0 0 1-9.366 0c-1.827-.205-3.302-1.643-3.516-3.48a41 41 0 0 1 0-9.503c.214-1.837 1.69-3.276 3.516-3.48m9.2 1.49a41 41 0 0 0-9.034 0A2.486 2.486 0 0 0 5.29 7.424a39.4 39.4 0 0 0 0 9.154a2.486 2.486 0 0 0 2.193 2.164c2.977.332 6.057.332 9.034 0a2.486 2.486 0 0 0 2.192-2.164a39.4 39.4 0 0 0 0-9.154a2.486 2.486 0 0 0-2.192-2.163" clip-rule="evenodd" />
+                  </svg>Añadir receta</a>
+            }
+        <button (click)="cancelarCita(cita.id)"
+            class="flex text-red-400 hover:text-red-600  p-2 items-center ">Cancelar</button>
+        } @else if (cita.estado === 'terminada' && cita.votado === false && isNotDoctor) {
+        <div class="inline-flex border border-gray-200 rounded-full p-0.5 mr-4">
+            <button (click)="voto(cita.doctor.id, true)" type="button"
+                class="inline-flex shrink-0 justify-center items-center size-8 rounded-full text-gray-500 hover:bg-blue-100 hover:text-blue-800 focus:outline-hidden focus:bg-blue-100 focus:text-blue-800 ">
+                <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round">
                     <path d="M7 10v12"></path>
-                    <path d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2h0a3.13 3.13 0 0 1 3 3.88Z"></path>
-                  </svg>
-                </button>
-                <button (click)="voto(cita.doctor.id, false)" type="button" class="inline-flex shrink-0 justify-center items-center size-8 rounded-full text-gray-500 hover:bg-blue-100 hover:text-blue-800 focus:outline-hidden focus:bg-blue-100 focus:text-blue-800">
-                  <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path
+                        d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2h0a3.13 3.13 0 0 1 3 3.88Z">
+                    </path>
+                </svg>
+            </button>
+            <button (click)="voto(cita.doctor.id, false)" type="button"
+                class="inline-flex shrink-0 justify-center items-center size-8 rounded-full text-gray-500 hover:bg-blue-100 hover:text-blue-800 focus:outline-hidden focus:bg-blue-100 focus:text-blue-800">
+                <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round">
                     <path d="M17 14V2"></path>
-                    <path d="M9 18.12 10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22h0a3.13 3.13 0 0 1-3-3.88Z"></path>
-                  </svg>
-                </button>
-            </div>
-        } @else if (cita.estado === 'terminada' && cita.votado === true) {
-            <div class="inline-flex items-center border border-gray-300 bg-gray-100 text-gray-700 text-sm font-medium rounded-full px-3 py-1 shadow-sm hover:bg-gray-200 transition">
-                Ya has votado
-            </div>
+                    <path
+                        d="M9 18.12 10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22h0a3.13 3.13 0 0 1-3-3.88Z">
+                    </path>
+                </svg>
+            </button>
+        </div>
+        } @else if (cita.estado === 'terminada' && cita.votado === true && isNotDoctor) {
+        <div
+            class="inline-flex items-center border border-gray-300 bg-gray-100 text-gray-700 text-sm font-medium rounded-full px-3 py-1 shadow-sm hover:bg-gray-200 transition">
+            Ya has votado
+        </div>
         }
-         @else if (cita.estado === 'cancelada') {
-            <div class="flex text-red-400 mr-5 p-2 items-center ">Cancelada</div>
+        @else if (cita.estado === 'cancelada') {
+        <div class="flex text-red-400 mr-5 p-2 items-center ">Cancelada</div>
         }
     </div>
 </div>
 
-
-
-
-
+<!-- @if (isModalDetalleCitaActivo) {
+    <div class="fixed inset-0 bg-gray-900/30 backdrop-blur-sm flex items-center justify-center z-50 animate-fade-in">
+        <div class="bg-white w-[500px]  rounded-2xl shadow-2xl transform transition-all duration-300 animate-slide-up">
+            <div
+                class="p-5 flex justify-between items-center bg-gradient-to-r from-blue-50 to-indigo-50 border-b border-gray-100">
+                <h2 class="text-xl font-semibold text-gray-800 tracking-tight">Detalles de la Cita</h2>
+                <button (click)="cerrarModal()" class="text-gray-500 hover:text-gray-700">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12">
+                        </path>
+                    </svg>
+                </button>
+            </div>
+            <div>
+                <div class="p-6 max-h-[70vh]">
+                    <p class="py-2"><span class="font-medium">Doctor:</span> {{ cita.doctor.nombre}} {{
+                        cita.doctor.apellidos }}</p>
+                    <p class="py-2"><span class="font-medium">Fecha:</span> {{ cita.fecha | date:'dd-MM-yyyy' }} </p>
+                    <p class="py-2"><span class="font-medium">Hora:</span> {{ cita.fecha | date: 'HH:mm':'UTC'}} -
+                        {{sumarMediaHora(cita.fecha) | date: 'HH:mm':'UTC'}}</p>
+                    <p class="py-2"><span class="font-medium">Motivo:</span> {{ cita.motivo }}</p>
+                    <p class="py-2"><span class="font-medium">Email del doctor:</span> {{ cita.doctor.email }}</p>
+                    <p class="py-2"><span class="font-medium">Dirección:</span> {{ cita.doctor.direccion }}</p>
+                    <p class="py-2"><span class="font-medium">Precio:</span> {{ cita.tarifa }}</p>
+                    <p class="py-2"><span class="font-medium">Teléfono:</span> {{ cita.telefono }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+} -->
