--- a/src/app/navs/user-nav/user-nav.component.html
+++ b/src/app/navs/user-nav/user-nav.component.html
@@ -1,5 +1,5 @@
 <div class="flex items-center">
-  @if (usuario.rol === 'admin') {
+  @if (isUsuario && usuario.rol === 'admin') {
     <div (click)="abrirFormulario()" class="mr-6 cursor-pointer">
       <button class="flex items-center bg-[#3B9AB8] transition-colors hover:bg-[#096c8a] text-white px-5 py-3 rounded-md">
         <svg class="mr-1 min-w-[24px]" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -7,6 +7,17 @@
           <path fill="currentColor" fill-rule="evenodd" d="M7.317 3.769a42.5 42.5 0 0 1 9.366 0c1.827.204 3.302 1.643 3.516 3.48c.37 3.157.37 6.346 0 9.503c-.215 1.837-1.69 3.275-3.516 3.48a42.5 42.5 0 0 1-9.366 0c-1.827-.205-3.302-1.643-3.516-3.48a41 41 0 0 1 0-9.503c.214-1.837 1.69-3.276 3.516-3.48m9.2 1.49a41 41 0 0 0-9.034 0A2.486 2.486 0 0 0 5.29 7.424a39.4 39.4 0 0 0 0 9.154a2.486 2.486 0 0 0 2.193 2.164c2.977.332 6.057.332 9.034 0a2.486 2.486 0 0 0 2.192-2.164a39.4 39.4 0 0 0 0-9.154a2.486 2.486 0 0 0-2.192-2.163" clip-rule="evenodd" />
         </svg>
         Añadir doctor
+      </button>
+    </div>
+  }
+  @if (isDoctor) {
+    <div (click)="abrirFormularioDisponibilidad()" class="mr-6 cursor-pointer">
+      <button class="flex items-center bg-[#3B9AB8] transition-colors hover:bg-[#096c8a] text-white px-5 py-3 rounded-md">
+        <svg class="mr-1 min-w-[24px]" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+          <path fill="currentColor" d="M7.007 12a.75.75 0 0 1 .75-.75h3.493V7.757a.75.75 0 0 1 1.5 0v3.493h3.493a.75.75 0 1 1 0 1.5H12.75v3.493a.75.75 0 0 1-1.5 0V12.75H7.757a.75.75 0 0 1-.75-.75" />
+          <path fill="currentColor" fill-rule="evenodd" d="M7.317 3.769a42.5 42.5 0 0 1 9.366 0c1.827.204 3.302 1.643 3.516 3.48c.37 3.157.37 6.346 0 9.503c-.215 1.837-1.69 3.275-3.516 3.48a42.5 42.5 0 0 1-9.366 0c-1.827-.205-3.302-1.643-3.516-3.48a41 41 0 0 1 0-9.503c.214-1.837 1.69-3.276 3.516-3.48m9.2 1.49a41 41 0 0 0-9.034 0A2.486 2.486 0 0 0 5.29 7.424a39.4 39.4 0 0 0 0 9.154a2.486 2.486 0 0 0 2.193 2.164c2.977.332 6.057.332 9.034 0a2.486 2.486 0 0 0 2.192-2.164a39.4 39.4 0 0 0 0-9.154a2.486 2.486 0 0 0-2.192-2.163" clip-rule="evenodd" />
+        </svg>
+        Disponibilidad
       </button>
     </div>
   }
@@ -36,5 +47,31 @@
 }
 
 @if (isFormularioActivo) {
-  <app-new-doctor (cambiarEstado)="cerrarFormulario($event)" />
+  <app-new-doctor (cambiarEstado)="cerrarFormularios($event)" />
 }
+
+@if (isFormularioDisponibilidadActivo) {
+  <app-form-disponibilidad (cambiarEstadoFormDisponibilidad)="cerrarFormularios($event)" [doctor]="doctor" />
+}
+
+
+<div id="alert-modal" class="fixed inset-0 bg-black bg-opacity-30 flex justify-center items-center hidden z-50">
+  <div class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto border-l-4 border-[#3b9ab8]">
+    <div class="flex items-start space-x-3">
+      <!-- Icono de información -->
+      <svg class="w-12 h-12 text-[#3b9ab8]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M12 2a10 10 0 110 20 10 10 0 010-20z" />
+      </svg>
+      <p id="alert-message" class="text-gray-800 font-medium"></p>
+    </div>
+    <button
+      class="mt-4 w-full bg-[#3b9ab8] text-white px-4 py-2 rounded-md hover:bg-[#338399] transition"
+      onclick="document.getElementById('alert-modal').classList.add('hidden'), document.body.classList.remove('overflow-hidden')"
+    >
+      Cerrar
+    </button>
+  </div>
+</div>
+
+
+
