--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,15 +4,22 @@
             <div class="pb-6">
                 <h2 class="text-lg font-bold">Jakarta</h2>
             </div>
-            <div>Especialidad</div>
-            <div>Citas</div>
+            
+            <div><a href="/especialidades">Especialidad</a></div>
+            <div > <a *ngIf="usuario.id != undefined; else login" href="/misCitasUsuario">Citas</a> </div>
+            <ng-template #login>
+                <a href="/login">Citas</a>
+              </ng-template>
             <div>Resultados</div>
         </div>
         <div class="pb-5">
             <div class="pb-7 font-bold">Información</div>
             <div>Sobre nosotros</div>
             <div>Servicios</div>
-            <a href="/listaDoctores" >Doctores</a>
+            <a *ngIf="usuario.id != undefined; else loguearse" href="/listaDoctores" >Doctores</a>
+            <ng-template #loguearse>
+                <a href="/login">Doctores</a>
+              </ng-template>
         </div>
         <div class="pb-5">
             <div class="pb-7 font-bold">¡Contáctanos!</div>
