Vistas-citas y lista-citas modificada para que cambie dependiendo de si es doctor o usuario

--- a/src/app/vistas/index-doctores/index-doctores.component.html
+++ b/src/app/vistas/index-doctores/index-doctores.component.html
@@ -17,13 +17,12 @@
             }
             
         </div>
-
-        <div class="container-right-section mb-[30px] p-5">
+        <div class="container-right-section mb-[30px]">
             <div class="container-header flex items-center justify-between mb-4">
                 <h3 class="titulos text-2xl font-semibold ">Citas Programadas</h3>
                 <a href="/misCitasUsuario" routerLink="/misCitasUsuario" class="enlace text-[#3B9AB8]">Ver Todas ></a>
             </div>
-            <!-- <app-lista-citas /> -->
+            <app-lista-citas />
         </div>
         
     </div>
