--- a/src/app/sections/lista-citas/cita/cita.component.html
+++ b/src/app/sections/lista-citas/cita/cita.component.html
@@ -69,8 +69,7 @@
                     <path fill="currentColor" fill-rule="evenodd" d="M7.317 3.769a42.5 42.5 0 0 1 9.366 0c1.827.204 3.302 1.643 3.516 3.48c.37 3.157.37 6.346 0 9.503c-.215 1.837-1.69 3.275-3.516 3.48a42.5 42.5 0 0 1-9.366 0c-1.827-.205-3.302-1.643-3.516-3.48a41 41 0 0 1 0-9.503c.214-1.837 1.69-3.276 3.516-3.48m9.2 1.49a41 41 0 0 0-9.034 0A2.486 2.486 0 0 0 5.29 7.424a39.4 39.4 0 0 0 0 9.154a2.486 2.486 0 0 0 2.193 2.164c2.977.332 6.057.332 9.034 0a2.486 2.486 0 0 0 2.192-2.164a39.4 39.4 0 0 0 0-9.154a2.486 2.486 0 0 0-2.192-2.163" clip-rule="evenodd" />
                   </svg>Añadir receta</a>
             }
-        <button (click)="cancelarCita(cita.id)"
-            class="flex text-red-400 hover:text-red-600  p-2 items-center ">Cancelar</button>
+            <button (click)="cancelarCita(cita.id)"class="flex text-red-400 hover:text-red-600  p-2 items-center ">Cancelar</button>
         } @else if (cita.estado === 'terminada' && cita.votado === false && isNotDoctor) {
         <div class="inline-flex border border-gray-200 rounded-full p-0.5 mr-4">
             <button (click)="voto(cita.doctor.id, true)" type="button"
@@ -101,8 +100,9 @@
             class="inline-flex items-center border border-gray-300 bg-gray-100 text-gray-700 text-sm font-medium rounded-full px-3 py-1 shadow-sm hover:bg-gray-200 transition">
             Ya has votado
         </div>
-        }
-        @else if (cita.estado === 'cancelada') {
+        }@else if (cita.estado === 'terminada') {
+            <div class="flex text-red-400 mr-5 p-2 items-center ">Terminada</div>
+        }@else if (cita.estado === 'cancelada') {
         <div class="flex text-red-400 mr-5 p-2 items-center ">Cancelada</div>
         }
     </div>
