Arreglando las citas por mes

--- a/src/app/navs/left-nav/left-nav.component.html
+++ b/src/app/navs/left-nav/left-nav.component.html
@@ -61,7 +61,7 @@
           </a>
           }
       }
-      @if (isDoctorOrAdmin) {
+      @if (isDoctor) {
       @if (horario) {
       <a class="flex items-center px-4 py-2 mt-5 text-[#7E7E7E] transition-colors duration-300 transform rounded-md bg-[#3B9AB8] text-[#FFFFFF]"
         href="/horario">
