--- a/src/app/vistas/edit-profile/edit-profile.component.html
+++ b/src/app/vistas/edit-profile/edit-profile.component.html
@@ -22,7 +22,7 @@
                 </div>
             }
             
-
+        @if (usuarios) {
             <div class="mb-8">
                 <label for="nombre" class="block mb-2 text-sm text-gray-600">Nombre</label>
                 <input type="text" [(ngModel)]="usuario.nombre" name="nombre" id="nombre" placeholder="Introduzca el nombre"
@@ -58,8 +58,51 @@
                 <input type="text" [(ngModel)]="usuario.direccion" name="direccion" id="direccion" placeholder="Introduzca la dirección"
                     class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
+        }@else {
+            <div class="mb-8">
+                <label for="nombre" class="block mb-2 text-sm text-gray-600">Nombre</label>
+                <input type="text" [(ngModel)]="doctor.nombre" name="nombre" id="nombre" placeholder="Introduzca el nombre"
+                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
 
+            <div class="mb-8">
+                <label for="apellidos" class="block mb-2 text-sm text-gray-600">Apellidos</label>
+                <input type="text" [(ngModel)]="doctor.apellidos" name="apellidos" id="apellidos" placeholder="Introduzca los apellidos"
+                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mb-8">
+                <label for="email" class="block mb-2 text-sm text-gray-600">Email</label>
+                <input type="email" [(ngModel)]="doctor.email" name="email" id="email" placeholder="email@ejemplo.com"
+                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mb-8">
+                <label for="telefono" class="block mb-2 text-sm text-gray-600">Precio Consulta</label>
+                <input type="text" [(ngModel)]="doctor.precioConsulta" name="telefono" id="telefono" placeholder="Introduzca su número de teléfono"
+                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mb-8">
+                <label for="localidad" class="block mb-2 text-sm text-gray-600">Localidad</label>
+                <input type="text" [(ngModel)]="doctor.localidad" name="localidad" id="localidad" placeholder="Introduzca la localidad"
+                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mb-8">
+                <label for="direccion" class="block mb-2 text-sm text-gray-600">Dirección</label>
+                <input type="text" [(ngModel)]="doctor.direccion" name="direccion" id="direccion" placeholder="Introduzca la dirección"
+                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mb-8">
+                <label for="direccion" class="block mb-2 text-sm text-gray-600">Sexo</label>
+                <input type="text" [(ngModel)]="doctor.sexo" name="direccion" id="direccion" placeholder="Introduzca la dirección"
+                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+        }
         </div>
+    
 
         <div class="flex justify-end mt-2">
             <button class="bg-[#3B9AB8] text-white px-12 py-3 rounded" (click)="editar()">Confirmar</button>
