--- a/src/app/vistas/info-general-cambio-password/info-general-cambio-password.component.html
+++ b/src/app/vistas/info-general-cambio-password/info-general-cambio-password.component.html
@@ -6,7 +6,7 @@
                 <path d="M24 0v24H0V0zM12.593 23.258l-.011.002l-.071.035l-.02.004l-.014-.004l-.071-.035q-.016-.005-.024.005l-.004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-.004l.104-.074l.012-.016l.004-.017l-.017-.427q-.004-.016-.017-.018m.265-.113l-.013.002l-.185.093l-.01.01l-.003.011l.018.43l.005.012l.008.007l.201.093q.019.005.029-.008l.004-.014l-.034-.614q-.005-.019-.02-.022m-.715.002a.02.02 0 0 0-.027.006l-.006.014l-.034.614q.001.018.017.024l.015-.002l.201-.093l.01-.008l.004-.011l.017-.43l-.003-.012l-.01-.01z" /> <path fill="#000" d="M3.636 11.293a1 1 0 0 0 0 1.414l5.657 5.657a1 1 0 0 0 1.414-1.414L6.757 13H20a1 1 0 1 0 0-2H6.757l3.95-3.95a1 1 0 0 0-1.414-1.414z" /> </g>
             </svg>
         </div>
-
+            @if (usuarios) {
         <div class="container m-6 max-w-[90%] justify-center">
             <div class="text-[27px] font-semibold mb-5">Editar Contraseña</div>
             
@@ -35,6 +35,36 @@
             </p>
 
         </div>
+    }@else {
+        <div class="container m-6 max-w-[90%] justify-center">
+            <div class="text-[27px] font-semibold mb-5">Editar Contraseña Doctor</div>
+            
+            <div class="mb-8">
+                <label for="password" class="block mb-2 text-sm text-gray-600">Contraseña</label>
+                <input type="password" [(ngModel)]="antiguaPassword" name="password" id="password" placeholder="Ingrese su contraseña"
+                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mb-8">
+                <label for="repeatPassword" class="block mb-2 text-sm text-gray-600">Repetir Contraseña</label>
+                <input type="password" [(ngModel)]="repetirAntiguaPassword"  name="repeatPassword" id="repeatPassword" placeholder="Repita su contraseña"
+                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+            <p *ngIf="antiguaPassword !== repetirAntiguaPassword" class="text-red-500 text-sm">
+                Las contraseñas no coinciden.
+            </p>
+
+            <div class="mb-8">
+                <label for="change-password" class="block mb-2 text-sm text-gray-600">Cambiar Contraseña</label>
+                <input type="password" [(ngModel)]="nuevaPassword" name="nuevaPassword" id="nuevaPassword" placeholder="Ingrese la nueva contraseña"
+                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+            <p *ngIf="antiguaPassword === nuevaPassword" class="text-red-500 text-sm">
+                La contraseña actual no puedeser igual a la antigua.
+            </p>
+
+        </div>
+    }
 
         <div class="flex justify-end mt-2">
             <button (click)="compararPassword()" class="bg-[#3B9AB8] text-white px-12 py-3 rounded">Confirmar</button>
